# cpp_topics

./: .gitignore  README.md
samples/: bazel-genfiles  bazel-out  bazel-samples  bazel-testlogs
samples/template_meta_programming/: BUILD  factorial.h  if_else.h  language.h  loop.h  main.cpp  switch.h
samples/template_meta_programming/testing/: BUILD
src/: CMakeLists.txt
src/idioms/: CMakeLists.txt  pimpl.cpp  pimpl.h
src/language/: CMakeLists.txt  default_and_delete.cpp  dynamic_dispatch.cpp  functors.cpp  functors_and_types.cpp  list_initialization.cpp  this.cpp
src/stl/: CMakeLists.txt  bind.cpp
