project(language)

add_executable(functors functors.cpp)
add_executable(functors_and_types functors_and_types.cpp)
add_executable(default_and_delete default_and_delete.cpp)
add_executable(list_initialization list_initialization.cpp)
add_executable(dynamic_dispatch dynamic_dispatch.cpp)
add_executable(this this.cpp)
